--- a/MovieJournal/MovieJournal/Views/Home/Index.cshtml
+++ b/MovieJournal/MovieJournal/Views/Home/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<MovieJournalDTO.Movie>
+﻿@model MovieJournalDTO.MovieList
 @{
     ViewBag.Title = "Home Page";
 }
 <div class="row">
 
-    @foreach(var item in Model)
+    @foreach(var item in Model.Movies)
     {
 <div class="col-sm-6 col-md-3">
     <div class="thumbnail">
