--- a/MovieJournal/MovieJournal/Views/Home/Index.cshtml
+++ b/MovieJournal/MovieJournal/Views/Home/Index.cshtml
@@ -7,14 +7,14 @@
     @foreach(var item in Model.Movies)
     {
 <div class="col-sm-6 col-md-3">
-    <div class="thumbnail">
-        <img src="https://image.tmdb.org/t/p/w185/D6e8RJf2qUstnfkTslTXNTUAlT.jpg">
+    <div class="thumbnail bg-success">
+        <img src="@Html.DisplayFor(modelItem => item.Image)">
         <div class="caption">
-            <center><h3>@Html.DisplayFor(modelItem => item.Title)</h3></center>
-            <p>@Html.DisplayFor(modelItem => item.Overview)</p>
+            <center><h3 style="min-height:60px;height:60px;">@Html.DisplayFor(modelItem => item.ShortTitle)</h3></center>
+            <p style="min-height:80px;height:80px;">@Html.DisplayFor(modelItem => item.ShortOverview)</p>
             <center>
                 <p>
-                    <a href="#" class="btn btn-primary" role="button">Details</a>
+                    @Html.ActionLink("Details", "GetMovie", new { id = item.Id }, new { @class = "btn btn-primary" })
                     <a href="#" class="btn btn-success" role="button">Add to list</a>
                 </p>
             </center>
