--- a/MovieJournal/MovieJournal/Views/Home/GetMovie.cshtml
+++ b/MovieJournal/MovieJournal/Views/Home/GetMovie.cshtml
@@ -7,19 +7,28 @@
 <div class="container table-bordered">
     <div class="row">
         <div class="col-md-2">
-            <table>
-                <tr><img src="@Model.Image"></tr>
-                <tr><h4>@Model.Status</h4></tr>
-            </table>
+                <img src="@Model.Image">
         </div>
-        <div class="col-md-10">
+        <div class="col-md-6">
                 <h1>@Model.Title</h1>
                 <h3 style="color:gray;display: block;"> (@Model.Release.Substring(0, 4))</h3>
                 <h4> <span class="glyphicon glyphicon-star"></span> @Model.Rating/10</h4>
-                <h5>@Model.Overview</h5>
+                <p>@Model.Overview</p>
+        </div>
+        <div class="col-md-4"  style="border:inset #333333;border-width: 1px; border-right:none">
+            <h4>@Html.LabelFor(Model => Model.Genres):</h4>
+            
+                @foreach (var item in @Model.Genres)
+                {
+                    <h5>@Html.DisplayFor(modelItem => item.Name)</h5>
+
+                }
+                <br />
+            <h4>@Html.LabelFor(Model => Model.Status):</h4>
+            <h5>@Model.Status</h5>
         </div>
     </div>
-
+    <br />
     <a href="javascript:history.go(-1)" class="btn btn-warning" role="button">Back</a> |
     <a href="#" class="btn btn-success" role="button">Add to list</a>
     <br />
