--- a/MovieJournal/MovieJournal/Views/Shared/_Layout.cshtml
+++ b/MovieJournal/MovieJournal/Views/Shared/_Layout.cshtml
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Movie Journal</title>
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/SearchBar.css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
@@ -27,6 +28,18 @@
             </div>
         </div>
     </div>
+
+    <div class="navbar navbar-default navbar-top">
+        <div class="container">
+            <div class="navbar-collapse collapse">
+                    <form action="/home/search/">
+                        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                        <span><input type="text" id="query" name="query" class="search rounded" placeholder="Search..."></span>
+                    </form>
+            </div>
+        </div>
+    </div>
+
     <div class="container body-content">
         @RenderBody()
         <hr />
