Lidt mere lavet i front-end

--- a/MovieJournal/MovieJournal/Views/Home/Search.cshtml
+++ b/MovieJournal/MovieJournal/Views/Home/Search.cshtml
@@ -10,7 +10,7 @@
     {
         <div class="col-sm-6 col-md-3">
             <div class="thumbnail" style="box-shadow: 3px 3px 5px #888888;">
-                <img src="@Html.DisplayFor(modelItem => item.Image)">
+                <img src="@Html.DisplayFor(modelItem => item.Image)" style="min-height:80px;height:280px;">
                 <div class="caption">
                     <center><h3 style="min-height:60px;height:60px;">@Html.DisplayFor(modelItem => item.ShortTitle)</h3></center>
                     <p style="min-height:80px;height:80px;">@Html.DisplayFor(modelItem => item.ShortOverview)</p>
