--- a/MovieJournal/MovieJournal/Views/Shared/_Layout.cshtml
+++ b/MovieJournal/MovieJournal/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
             <div class="navbar-collapse collapse">
                     <form action="/home/search/">
                         <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                        <span><input type="text" id="query" name="query" class="search rounded" placeholder="Search..."></span>
+                        <span><input type="text" name="query" class="search rounded" placeholder="Search..."></span>
                     </form>
             </div>
         </div>
