--- a/MovieJournal/MovieJournal/Views/Home/GetMovie.cshtml
+++ b/MovieJournal/MovieJournal/Views/Home/GetMovie.cshtml
@@ -11,8 +11,21 @@
         </div>
         <div class="col-md-6">
                 <h1>@Model.Title</h1>
-                <h3 style="color:gray;display: block;"> (@Model.Release.Substring(0, 4))</h3>
-                <h4> <span class="glyphicon glyphicon-star"></span> @Model.Rating/10</h4>
+                <h3 style="color:gray;display: block;"> 
+            (@if (@Model.Release.Length >= 4)
+            {@Model.Release.Substring(0, 4)}
+            else
+            {
+            <text>No release date</text>
+            })
+                </h3>
+                <h4> 
+                <span class="glyphicon glyphicon-star"></span>
+                    @if (@Model.Rating == 0)
+                    {<text>No rating available</text>}
+                    else
+                    {@Model.Rating<text>/10</text>}
+                </h4>
                 <p>@Model.Overview</p>
         </div>
         <div class="col-md-4"  style="border:inset #333333;border-width: 1px; border-right:none">
@@ -25,7 +38,15 @@
                 }
                 <br />
             <h4>@Html.LabelFor(Model => Model.Status):</h4>
-            <h5>@Model.Status</h5>
+            @if (@Model.Status.Equals("Released"))
+            {
+                <h5>@Model.Status</h5>
+            }
+            else
+            {
+                <h5>@Model.Status</h5>
+                <h5>Expected release: @Model.Release</h5>
+            }
         </div>
     </div>
     <br />
