--- a/MovieJournal/MovieJournal/Views/Shared/_Layout.cshtml
+++ b/MovieJournal/MovieJournal/Views/Shared/_Layout.cshtml
@@ -25,10 +25,11 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
+                @RenderPage("~/Views/Shared/_LoginLayout.cshtml")
             </div>
         </div>
     </div>
-
+    
     <div class="navbar navbar-default navbar-top">
         <div class="container">
             <div class="navbar-collapse collapse">
@@ -47,7 +48,7 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
+    
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
