--- a/MovieJournal/MovieJournal/Views/Account/Register.cshtml
+++ b/MovieJournal/MovieJournal/Views/Account/Register.cshtml
@@ -10,13 +10,13 @@
     @Html.ValidationSummary(true)
     <div class="form-horizontal">
         <div class="form-group">
-            @Html.LabelFor(m => m.Email, new { @class = "control-label col-md-2" })
+            @Html.LabelFor(m => m.UserName, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email", autofocus = true })
+                @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", placeholder = "User name", autofocus = true })
                 <span class="help-block">This will also be your user name when signing in!</span>
             </div>
             <div class="col-md-offset-2 col-md-10">
-                @Html.ValidationMessageFor(m => m.Email)
+                @Html.ValidationMessageFor(m => m.UserName)
             </div>
         </div>
 
