Ikke færdig (errors)

--- a/MovieJournal/MovieJournal/Views/Shared/_Layout.cshtml
+++ b/MovieJournal/MovieJournal/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("My movies", "Index", "Home")</li>
+                    <li>@Html.ActionLink("My movies", "Index", "Profile")</li>
                 </ul>
                 @RenderPage("~/Views/Shared/_LoginLayout.cshtml")
             </div>
