--- a/MovieJournal/MovieJournal/Views/Home/Index.cshtml
+++ b/MovieJournal/MovieJournal/Views/Home/Index.cshtml
@@ -22,7 +22,7 @@
                     }
                     else
                     {
-                        <a href="#" class="btn btn-success disabled" role="button">Add to list</a>
+                        <a href="#" class="btn btn-success disabled" role="button">Add</a>
                     }
                 </p>
             </center>
