--- a/MovieJournal/MovieJournal/Views/Account/Register.cshtml
+++ b/MovieJournal/MovieJournal/Views/Account/Register.cshtml
@@ -13,7 +13,7 @@
             @Html.LabelFor(m => m.UserName, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", placeholder = "User name", autofocus = true })
-                <span class="help-block">This will also be your user name when signing in!</span>
+                <span class="help-block">@Html.DisplayFor(m=> m.Taken)</span>
             </div>
             <div class="col-md-offset-2 col-md-10">
                 @Html.ValidationMessageFor(m => m.UserName)
