--- a/MovieJournal/MovieJournal/Views/Shared/_Layout.cshtml
+++ b/MovieJournal/MovieJournal/Views/Shared/_Layout.cshtml
@@ -48,7 +48,9 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Movie Journal</p>
+            <p><i>This product uses the TMDb API but is not endorsed or certified by TMDb.</i>
+                <img src="https://assets.tmdb.org/images/logos/var_8_0_tmdb-logo-2_Bree.svg" width="5%" height="5%" /></p>
         </footer>
     </div>
     
